@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-18T16:14:35Z",
-  "count_outdated" : 341,
-  "uniques_outdated" : 183,
-  "count" : 370,
+  "timestamp" : "2022-06-19T01:00:15Z",
+  "count_outdated" : 343,
+  "uniques_outdated" : 184,
+  "count" : 372,
   "uniques" : 201,
   "clones" : [
-    {
-      "timestamp": "2022-06-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-05T00:00:00Z",
       "count": 1,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
